issues with edit button alignment

--- a/src/LESS/newsfeed.less
+++ b/src/LESS/newsfeed.less
@@ -16,6 +16,7 @@
     display: flex;
     flex-wrap: wrap;
     .singlestory {
+        margin: 30px; 
         font-size: 13px;
         a {
             text-decoration: none;
