--- a/src/LESS/story.less
+++ b/src/LESS/story.less
@@ -2,7 +2,10 @@
     background: url('../imgs/plane.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: right bottom;
+    background-position: center bottom;
+    width: 100%;
+    height: 610px;
+    color: rgb(88, 87, 87); 
 }
 
 .big-box {
@@ -17,44 +20,55 @@
 
 }
 
-
-.userstory {
+.top-bar {
+    width: 100%; 
     display: flex;
-    max-width: 1300px;
-    margin: 0 auto;
-    .usertripinfo {
-        margin: 20px;
+    justify-content: space-between;
+    align-items: flex-start;  
 
-        img {
-            border-radius: 10px;
-            max-width: 500px;
-            border: 1px solid #707070;
-        }
-        p {
-            text-align: justify;
-            font-size: 15px;
-            line-height: 24px;
-            color: #515151;
-        }
+    .edit-button {
+        height: 30px; 
+        padding: 10px;
+        display: inline-block;
+        width: 200px;
+        color: #EFE9F4;
+        font-family: Montserrat;
+        font-size: 11px;
+        text-align: center;
+        border: 1px solid #FFFFFF;
+        border-radius: 8px;
+        background-color: #16BAC5;
+
     }
 }
 
+.top-bar-box {
+  line-height: 40px; 
+    h1 {
+        text-decoration: underline;
+        font-size: 30px; 
+    }
+    h3 {
+         font-size: 14px; 
+    }
+}
+
+
 .headoftrip {
-    max-width: 1300px;
     display: flex;
     margin: 0 auto;
     height: 40px;
-    height: 100px;
+    height: 90px;
 
     .headbox {
-        width: 970px;
+
         a {
             padding: 10px;
             display: inline-block;
             width: 120px;
             color: #EFE9F4;
             font-family: Montserrat;
-            font-size: 20px;
+            font-size: 10px;
             font-weight: 300;
             letter-spacing: 0.36px;
             text-align: center;
@@ -70,11 +84,36 @@
             width: auto;
         }
 
+  
+
+    }
+}
+
+
+.edit-stuff {
+    align-items: center;
+    display: flex;
+    width: 300px; 
+    a {
+        font-size: 22px; 
+        width: 100px;
+        padding: 5px;
+        box-sizing: border-box;
+        border: 1px solid #FFFFFF;
+        border-radius: 8px;
+        background-color: #16BAC5;
+        color: #EFE9F4;
+        font-family: Montserrat;
+        font-weight: 300;
+        letter-spacing: 0.36px;
+        text-align: center;
+    }
+    .edit-stuff-box {
+       width: 100%; 
     }
 }
 
 .trip-title {
-    margin: 30px;
     text-align: left;
     color: rgb(59, 59, 59);
     line-height: 30px;
@@ -96,31 +135,33 @@
     color: white;
 }
 
+
+
+.userstory {
+    width: 100%; 
+    display: flex;
+    .usertripinfo {
+     padding: 10px; 
+
+        img {
+            border-radius: 10px;
+            max-width: 500px;
+            border: 1px solid #707070;
+        }
+        p {
+            text-align: justify;
+            font-size: 15px;
+            line-height: 24px;
+            color: #515151;
+        }
+    }
+}
+
+
 .upvotes {
     text-align: right;
     padding: 30px;
     font-size: 18px;
 }
 
-.edit-stuff {
-    align-items: flex-start;
-    display: flex;
-    padding: 30px;
-    a {
-        width: 200px;
-        padding: 5px;
-        box-sizing: border-box;
-        border: 1px solid #FFFFFF;
-        border-radius: 8px;
-        background-color: #16BAC5;
-        color: #EFE9F4;
-        font-family: Montserrat;
-        font-size: 20px;
-        font-weight: 300;
-        letter-spacing: 0.36px;
-        text-align: center;
-    }
-    .edit-stuff-box {
-        margin: 12px;
-    }
-}
+
