--- a/src/css/index.css
+++ b/src/css/index.css
@@ -450,7 +450,10 @@ button:focus {
   background: url('../imgs/plane.png');
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: right bottom;
+  background-position: center bottom;
+  width: 100%;
+  height: 610px;
+  color: #585757;
 }
 .big-box {
   box-sizing: border-box;
@@ -462,41 +465,47 @@ button:focus {
   background-color: rgba(255, 255, 255, 0.3);
   box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.5);
 }
-.userstory {
+.top-bar {
+  width: 100%;
   display: flex;
-  max-width: 1300px;
-  margin: 0 auto;
+  justify-content: space-between;
+  align-items: flex-start;
 }
-.userstory .usertripinfo {
-  margin: 20px;
+.top-bar .edit-button {
+  height: 30px;
+  padding: 10px;
+  display: inline-block;
+  width: 200px;
+  color: #EFE9F4;
+  font-family: Montserrat;
+  font-size: 11px;
+  text-align: center;
+  border: 1px solid #FFFFFF;
+  border-radius: 8px;
+  background-color: #16BAC5;
 }
-.userstory .usertripinfo img {
-  border-radius: 10px;
-  max-width: 500px;
-  border: 1px solid #707070;
+.top-bar-box {
+  line-height: 40px;
 }
-.userstory .usertripinfo p {
-  text-align: justify;
-  font-size: 15px;
-  line-height: 24px;
-  color: #515151;
+.top-bar-box h1 {
+  text-decoration: underline;
+  font-size: 30px;
+}
+.top-bar-box h3 {
+  font-size: 14px;
 }
 .headoftrip {
-  max-width: 1300px;
   display: flex;
   margin: 0 auto;
   height: 40px;
-  height: 100px;
-}
-.headoftrip .headbox {
-  width: 970px;
+  height: 90px;
 }
 .headoftrip .headbox a {
   padding: 10px;
   display: inline-block;
   color: #EFE9F4;
   font-family: Montserrat;
-  font-size: 20px;
+  font-size: 10px;
   font-weight: 300;
   letter-spacing: 0.36px;
   text-align: center;
@@ -509,8 +518,29 @@ button:focus {
 .headoftrip .headbox .trash {
   width: auto;
 }
+.edit-stuff {
+  align-items: center;
+  display: flex;
+  width: 300px;
+}
+.edit-stuff a {
+  font-size: 22px;
+  width: 100px;
+  padding: 5px;
+  box-sizing: border-box;
+  border: 1px solid #FFFFFF;
+  border-radius: 8px;
+  background-color: #16BAC5;
+  color: #EFE9F4;
+  font-family: Montserrat;
+  font-weight: 300;
+  letter-spacing: 0.36px;
+  text-align: center;
+}
+.edit-stuff .edit-stuff-box {
+  width: 100%;
+}
 .trip-title {
-  margin: 30px;
   text-align: left;
   color: #3b3b3b;
   line-height: 30px;
@@ -528,32 +558,28 @@ button:focus {
   text-align: right;
   color: white;
 }
+.userstory {
+  width: 100%;
+  display: flex;
+}
+.userstory .usertripinfo {
+  padding: 10px;
+}
+.userstory .usertripinfo img {
+  border-radius: 10px;
+  max-width: 500px;
+  border: 1px solid #707070;
+}
+.userstory .usertripinfo p {
+  text-align: justify;
+  font-size: 15px;
+  line-height: 24px;
+  color: #515151;
+}
 .upvotes {
   text-align: right;
   padding: 30px;
   font-size: 18px;
-}
-.edit-stuff {
-  align-items: flex-start;
-  display: flex;
-  padding: 30px;
-}
-.edit-stuff a {
-  width: 200px;
-  padding: 5px;
-  box-sizing: border-box;
-  border: 1px solid #FFFFFF;
-  border-radius: 8px;
-  background-color: #16BAC5;
-  color: #EFE9F4;
-  font-family: Montserrat;
-  font-size: 20px;
-  font-weight: 300;
-  letter-spacing: 0.36px;
-  text-align: center;
-}
-.edit-stuff .edit-stuff-box {
-  margin: 12px;
 }
 .newposts {
   padding: 40px;
@@ -572,6 +598,7 @@ button:focus {
   flex-wrap: wrap;
 }
 .allstories .singlestory {
+  margin: 30px;
   font-size: 13px;
 }
 .allstories .singlestory a {
